crates/usfm_usx/tests/snapshots/reader__usx_verse_end_mismatch__chapter.snap
---
source: crates/usfm_usx/tests/reader.rs
description: "<usx version=\"3.0\"><book code=\"GEN\" style=\"id\"/><chapter number=\"1\" style=\"c\" sid=\"GEN 1\"/><para style=\"p\">text</para><chapter eid=\"GEN 2\"/></usx>"
---
Book GEN "" @19..48
Para usfm@5..18
  Text "3.0"@14..17
ChapterStart 1@48..91
Para p@91..118
  Text "text"@107..111
ChapterEnd 1
--- diagnostics
error[usx-verse-end-mismatch] @132..137: `eid="GEN 2"` ends chapter `GEN 1`, which is the one open
